# mpris-lan

./: .gitignore  MANIFEST.in  README.md  app.py  control_schema.json  control_schema2.json  layout_demo.html  pyproject.toml  requirements.txt
mpris_lan.egg-info/: SOURCES.txt  entry_points.txt
src/: app.py
src/mpris_lan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/static/: index.html  layout_demo.html  media_session.js  style.css
static/: index.html
